--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,9 @@
-[context.production.environment]
-TZ = "Europe/Rome" 
 [build]
-publish = "public"
+  publish = "public"
+  command = "hugo"
+
+[context.production.environment]
+  HUGO_VERSION = "0.111.3"
+  HUGO_ENV = "production"
+  HUGO_ENABLEGITINFO = "true"
+
